--- a/app/styles/components/_risk-of-change.scss
+++ b/app/styles/components/_risk-of-change.scss
@@ -1,18 +1,17 @@
 .risk-of-change {
   display: inline-block;
-  @include rem('margin-top', $global-padding);
-
-  @include media-query(md) {
-  	margin-top: 0;
-    @include rem('margin-left', $global-padding);
-  }
 
   i {
     @include font-size(18px);
     line-height: 1.5;
   }
 
-  .icon-inline {
-    padding-left: 24px;
-  }
+  .icon-inline { @include rem('padding-left', 20px); }
+}
+
+.icon-inline + .risk-of-change,
+.risk-of-change + .icon-inline,
+.icon-group + .risk-of-change,
+.risk-of-change + .icon-group {
+  @include rem('margin-left', $global-padding);
 }
